feat: add log in session

--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -24,7 +24,7 @@
         name="last_name"
         value="<%= value.last_name %>"
       />
-      <label for="admin_code">Username</label>
+      <label for="username">Username</label>
       <input
         id="username"
         type="text"
@@ -33,7 +33,7 @@
         required
         value="<%= value.username %>"
       />
-      <label for="admin_code">Email Address</label>
+      <label for="email">Email Address</label>
       <input
         id="email"
         type="email"
