--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,11 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat</title>
+    <link rel="stylesheet" href="/chat.css" />
   </head>
   <body>
     <% if (locals.user) {%>
     <h1>WELCOME BACK <%= user.username %></h1>
     <a href="/log-out">LOG OUT</a>
+    <div class="chat-container">
+      <div class="message-input-container">
+        <div class="message-container">
+          <span>Anonymous: Hello</span>
+          <span>Anonymous: Yes</span>
+        </div>
+        <form action="/sending-message" method="POST">
+          <input
+            type="text"
+            hidden
+            value="<%-user.username%>"
+            name="username"
+          />
+          <input
+            type="text"
+            name="message"
+            id="message"
+            placeholder="Add a message..."
+          />
+          <button type="submit">></button>
+        </form>
+      </div>
+    </div>
     <% } else { %>
     <h1>please log in</h1>
     <form action="/log-in" method="POST">
