--- a/public/chat.css
+++ b/public/chat.css
@@ -1,4 +1,163 @@
-.message-container {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #121212;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.chat-container {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  overflow: hidden;
+  align-items: center;
+}
+
+.small-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 600px;
+  height: 100vh;
+  background-color: black;
+  overflow: hidden;
+}
+
+header {
+  padding: 10px;
+  background-color: #18181b;
+  color: white;
+  text-align: center;
+  flex-shrink: 0;
+  width: 100%;
+}
+
+header a {
+  color: lightblue;
+  text-decoration: none;
+  font-size: 1rem;
+  display: block;
+  margin-top: 5px;
+  border-bottom: gray 1px solid;
+}
+
+.message-container {
+  flex-grow: 1;
+  overflow-y: auto;
+  padding: 10px;
+  background-color: #18181b;
+  scrollbar-width: thin;
+  scrollbar-color: #888 transparent;
+}
+
+.message-container::-webkit-scrollbar-track {
+  background-color: transparent;
+  border-radius: 10px;
+}
+
+.message {
+  /* margin-bottom: 10px; */
+  display: flex;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 6px;
+  padding-right: 6px;
+  /* align-items: center; */
+}
+
+.message:hover {
+  cursor: pointer;
+  background-color: #3d3d40;
+  opacity: 100%;
+  border-radius: 4px;
+}
+
+.message:hover .delete-btn {
+  visibility: visible;
+}
+
+.delete-btn {
+  visibility: hidden;
+  padding: 0;
+  border: none;
+  background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.delete-icon {
+  width: 24px;
+  height: 24px;
+  color: red;
+  cursor: pointer;
+}
+
+.user-name-container {
+  min-width: fit-content;
+  /* min-width: 90px; */
+  background-color: transparent;
+}
+
+.chat-msg-container {
+  flex-grow: 1;
+  padding-left: 12px;
+  padding-right: 12px;
+  background-color: transparent;
+}
+
+.message p {
+  color: white;
+  word-wrap: break-word; /* Ensures long words break to the next line */
+  overflow-wrap: break-word; /* Modern alternative to word-wrap */
+  word-break: break-word; /* Break long unbroken words */
+  max-width: 100%; /* Prevents text from exceeding the container's width */
+}
+
+.username {
+  color: red;
+}
+
+footer {
+  padding: 10px;
+  background-color: #1f1f1f;
+  flex-shrink: 0;
+}
+
+.input-form {
+  display: flex;
+  gap: 8px;
+}
+
+.input-form input[type="text"] {
+  flex: 1;
+  padding: 8px;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+.input-form button {
+  padding: 8px 12px;
+  font-size: 1rem;
+  background-color: #282828;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.input-form button:hover {
+  background-color: #383838;
 }
