--- a/views/adminChatRoom.ejs
+++ b/views/adminChatRoom.ejs
@@ -7,36 +7,79 @@
     <link rel="stylesheet" href="/chat.css" />
   </head>
   <body>
-    <h1>Welcome Back <%= user.username %></h1>
-    <a href="/log-out">LOG OUT</a>
     <div class="chat-container">
-      <div class="message-input-container">
-        <div class="message-container">
+      <header>
+        <h1>Welcome Back <%= user.username %></h1>
+        <a href="/log-out">LOG OUT</a>
+      </header>
+      <div class="small-container">
+        <main class="message-container" id="messageContainer">
           <% messages.forEach(message => { %>
-          <span
-            ><%= message.username %>: <%= message.message %>
+          <div class="message">
+            <p class="user-name-container">
+              <strong class="username"><%= message.username %>:</strong>
+            </p>
+            <p class="chat-msg-container"><%= message.message %></p>
             <form action="/delete/<%= message.id %>" method="POST">
-              <button type="submit">Delete</button>
-            </form></span
-          >
+              <button type="submit" class="delete-btn">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6 svg-icon delete-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"
+                  />
+                </svg>
+              </button>
+            </form>
+          </div>
           <% }) %>
-        </div>
-        <form action="/chat-room" method="POST">
-          <input
-            type="text"
-            hidden
-            value="<%-user.username%>"
-            name="username"
-          />
-          <input
-            type="text"
-            name="message"
-            id="message"
-            placeholder="Add a message..."
-          />
-          <button type="submit">></button>
-        </form>
+        </main>
+        <footer>
+          <form action="/chat-room" method="POST" class="input-form">
+            <input
+              type="text"
+              hidden
+              value="<%- user.username %>"
+              name="username"
+            />
+            <input
+              type="text"
+              name="message"
+              id="message"
+              required
+              placeholder="Add a message..."
+            />
+            <button type="submit">Send</button>
+          </form>
+        </footer>
       </div>
     </div>
+    <script>
+      const messages = document.querySelectorAll(".messages");
+      function scrollToBottom() {
+        const messageContainer = document.getElementById("messageContainer");
+        messageContainer.scrollTop = messageContainer.scrollHeight;
+      }
+
+      window.onload = scrollToBottom;
+
+      const observer = new MutationObserver(scrollToBottom);
+      observer.observe(document.getElementById("messageContainer"), {
+        childList: true,
+      });
+
+      messages.forEach((container) => {
+        container.addEventListener("mouseover", (e) => {
+          console.log(e.target);
+        });
+      });
+    </script>
   </body>
 </html>
