--- a/views/chatRoom.ejs
+++ b/views/chatRoom.ejs
@@ -7,31 +7,50 @@
     <link rel="stylesheet" href="/chat.css" />
   </head>
   <body>
-    <h1>Welcome Back <%= user.username %></h1>
-    <a href="/log-out">LOG OUT</a>
     <div class="chat-container">
-      <div class="message-input-container">
-        <div class="message-container">
-          <% messages.forEach(message => { %>
-          <span>Anonymous: <%= message.message %></span>
-          <% }) %>
+      <header>
+        <h1>Welcome Back <%= user.username %></h1>
+        <a href="/log-out">LOG OUT</a>
+      </header>
+      <main class="message-container" id="messageContainer">
+        <% messages.forEach(message => { %>
+        <div class="message">
+          <p>
+            <strong class="username">Anonymous:</strong> <%= message.message %>
+          </p>
         </div>
-        <form action="/chat-room" method="POST">
+        <% }) %>
+      </main>
+      <footer>
+        <form action="/chat-room" method="POST" class="input-form">
           <input
             type="text"
             hidden
-            value="<%-user.username%>"
+            value="<%- user.username %>"
             name="username"
           />
           <input
             type="text"
             name="message"
             id="message"
+            required
             placeholder="Add a message..."
           />
           <button type="submit">></button>
         </form>
-      </div>
+      </footer>
     </div>
+    <script>
+      function scrollToBottom() {
+        const messageContainer = document.getElementById("messageContainer");
+        messageContainer.scrollTop = messageContainer.scrollHeight;
+      }
+      window.onload = scrollToBottom;
+
+      const observer = new MutationObserver(scrollToBottom);
+      observer.observe(document.getElementById("messageContainer"), {
+        childList: true,
+      });
+    </script>
   </body>
 </html>
