feat: user role style

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat</title>
+    <title>Chatter</title>
+    <link rel="shortcut icon" href="/icons/chat.png" type="image/x-icon" />
   </head>
   <body>
     <h1>Have Account ?</h1>
@@ -11,5 +12,8 @@
 
     <h2>Create Account</h2>
     <button><a href="/sign-up">Sign-Up</a></button>
+
+    <h2>Join as a Guest</h2>
+    <button><a href="/chat-room">Start Chatting</a></button>
   </body>
 </html>
