--- a/public/chat.css
+++ b/public/chat.css
@@ -68,8 +68,8 @@ header a {
 .message {
   /* margin-bottom: 10px; */
   display: flex;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   padding-left: 6px;
   padding-right: 6px;
   /* align-items: center; */
@@ -79,7 +79,7 @@ header a {
   cursor: pointer;
   background-color: #3d3d40;
   opacity: 100%;
-  border-radius: 4px;
+  border-radius: 0 4px 4px 0;
 }
 
 .message:hover .delete-btn {
@@ -100,7 +100,7 @@ header a {
 .delete-icon {
   width: 24px;
   height: 24px;
-  color: red;
+  /* color: red; */
   cursor: pointer;
 }
 
@@ -127,12 +127,15 @@ header a {
 
 .username {
   color: red;
+  display: flex;
+  align-items: center;
 }
 
 footer {
   padding: 10px;
   background-color: #1f1f1f;
   flex-shrink: 0;
+  padding-bottom: 18px;
 }
 
 .input-form {
@@ -151,7 +154,7 @@ footer {
 .input-form button {
   padding: 8px 12px;
   font-size: 1rem;
-  background-color: #282828;
+  background-color: #38bdf8;
   color: white;
   border: none;
   border-radius: 4px;
@@ -159,5 +162,54 @@ footer {
 }
 
 .input-form button:hover {
-  background-color: #383838;
+  background-color: #0ea5e9;
+}
+
+.admin-icon {
+  height: 24px;
+  width: auto;
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
+.member-icon {
+  height: 18px;
+  width: auto;
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
+.changecolor {
+  animation: colorchange 10s infinite;
+}
+
+@keyframes colorchange {
+  0% {
+    background: #7ad8f5;
+    color: white;
+  }
+  20% {
+    background: #9342a6;
+    color: white;
+  }
+  40% {
+    background: #aa1a13;
+    color: white;
+  }
+  60% {
+    background: #fecf87;
+  }
+  61% {
+    color: #333;
+  }
+  80% {
+    background: #aee77e;
+  }
+  81% {
+    color: white;
+  }
+  100% {
+    background: #7ad8f5;
+    color: white;
+  }
 }
