--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign up</title>
+    <title>Sing-Up</title>
+    <link rel="shortcut icon" href="/icons/chat.png" type="image/x-icon" />
     <link rel="stylesheet" href="/signup-form.css" />
   </head>
   <body>
