--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,6 @@
     <button><a href="/sign-up">Sign-Up</a></button>
 
     <h2>Join as a Guest</h2>
-    <button><a href="/chat-room">Start Chatting</a></button>
+    <button><a href="/chat-room">Chat Room</a></button>
   </body>
 </html>
