--- a/public/chat.css
+++ b/public/chat.css
@@ -48,16 +48,34 @@ header a {
   font-size: 1rem;
   display: block;
   margin-top: 5px;
-  border-bottom: gray 1px solid;
+  /* border-bottom: gray 1px solid; */
 }
 
 .message-container {
   flex-grow: 1;
   overflow-y: auto;
-  padding: 10px;
+  /* padding: 10px; */
   background-color: #18181b;
   scrollbar-width: thin;
   scrollbar-color: #888 transparent;
+}
+
+.date-header {
+  /* background-color: red; */
+  text-align: center;
+  color: white;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+.message-time {
+  /* background-color: blue; */
+  color: white;
+  opacity: 70%;
+  font-size: small;
+  display: flex;
+  padding-left: 8px;
+  align-items: center;
 }
 
 .message-container::-webkit-scrollbar-track {
@@ -72,6 +90,7 @@ header a {
   padding-bottom: 12px;
   padding-left: 6px;
   padding-right: 6px;
+  flex-direction: column;
   /* align-items: center; */
 }
 
@@ -107,18 +126,25 @@ header a {
 .user-name-container {
   min-width: fit-content;
   /* min-width: 90px; */
+  display: flex;
   background-color: transparent;
 }
 
 .chat-msg-container {
   flex-grow: 1;
-  padding-left: 12px;
+  display: flex;
+  /* padding-left: 12px; */
   padding-right: 12px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  width: 100%;
   background-color: transparent;
 }
 
-.message p {
+.message div {
   color: white;
+  display: flex;
+  justify-content: space-between;
   word-wrap: break-word; /* Ensures long words break to the next line */
   overflow-wrap: break-word; /* Modern alternative to word-wrap */
   word-break: break-word; /* Break long unbroken words */
@@ -126,7 +152,7 @@ header a {
 }
 
 .username {
-  color: red;
+  /* color: red; */
   display: flex;
   align-items: center;
 }
