--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chatter</title>
+    <title>ChatterBox</title>
     <link rel="shortcut icon" href="/icons/chat.png" type="image/x-icon" />
   </head>
   <body>
+    <div></div>
+
     <h1>Have Account ?</h1>
     <button><a href="/log-in">Log-In</a></button>
 
