--- a/views/guestChatRoom.ejs
+++ b/views/guestChatRoom.ejs
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Chat | Chatter</title>
+    <title>Guest Chat | ChatterBox</title>
     <link rel="stylesheet" href="/chat.css" />
+    <link rel="shortcut icon" href="/icons/chat.png" type="image/x-icon" />
   </head>
   <body>
     <div class="chat-container">
