--- a/views/chatRoom/adminChatRoom.ejs
+++ b/views/chatRoom/adminChatRoom.ejs
@@ -3,15 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guest Chat | ChatterBox</title>
+    <title>Admin Chat | ChatterBox</title>
     <link rel="stylesheet" href="/chat.css" />
     <link rel="shortcut icon" href="/icons/chat.png" type="image/x-icon" />
   </head>
   <body>
     <div class="chat-container">
       <header>
-        <h1>Welcome Back <%= user.username %></h1>
-        <a href="/log-out">LOG OUT</a>
+        <div class="header-container">
+          <h3 class="web-head-icon">ChatterBox</h3>
+          <div class="profile-ctr">
+            <button><a href="/log-out">LOG OUT</a></button>
+          </div>
+        </div>
+        <!-- <h1>Welcome Back <%= user.username %></h1> -->
       </header>
       <div class="small-container">
         <main class="message-container" id="messageContainer">
@@ -30,7 +35,7 @@
           groupedMessages[dateKey] = []; groupedMessages[dateKey].push(message);
           }); for (const dateGroup in groupedMessages) { %>
           <div class="date-group">
-            <h3 class="date-header"><%= dateGroup %></h3>
+            <p class="date-header"><%= dateGroup %></p>
             <% groupedMessages[dateGroup].forEach((message) => { %>
             <div
               class="message <%= message.profile_color %>"
@@ -41,13 +46,38 @@
                   class="username"
                   style="color: <%= message.profile_color %>"
                 >
-                  Anonymous
+                  <%= message.username %> <% if (message.is_admin) { %>
+                  <img src="/icons/protection (3).png" class="admin-icon" />
+                  <% } else { %>
+                  <img src="/icons/member.png" class="member-icon" />
+                  <% } %>
                 </strong>
                 <span class="message-time"
                   ><%= formatTime(message.created_at) %></span
                 >
               </p>
-              <div class="chat-msg-container"><%= message.message %></div>
+              <div class="chat-msg-container">
+                <%= message.message %>
+                <form action="/delete/<%= message.id %>" method="POST">
+                  <button type="submit" class="delete-btn">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.5"
+                      stroke="currentColor"
+                      class="size-6 svg-icon delete-icon"
+                      style="color: <%= message.profile_color %>"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0"
+                      />
+                    </svg>
+                  </button>
+                </form>
+              </div>
             </div>
             <% }) %>
           </div>
@@ -57,38 +87,19 @@
           <form action="/chat-room" method="POST" class="input-form">
             <input
               type="text"
+              hidden
+              value="<%- user.username %>"
+              name="username"
+            />
+            <input
+              type="text"
               name="message"
               id="message"
               required
-              placeholder="You need to become a member to start chatting"
-              disabled
-              style="
-                padding: 10px;
-                font-size: 14px;
-                color: white;
-                border-radius: 4px;
-                width: 250px;
-                opacity: 1;
-                background-color: #333;
-              "
+              class="input-focus"
+              placeholder="Add a message..."
             />
-
-            <button
-              type="submit"
-              class="changecolor"
-              disabled
-              style="
-                padding: 10px 15px;
-                background-color: #ccc;
-                color: #fff;
-                border: none;
-                border-radius: 4px;
-                cursor: not-allowed;
-                pointer-events: none;
-              "
-            >
-              Send
-            </button>
+            <button type="submit" class="changecolor">Send</button>
           </form>
         </footer>
       </div>
