feat: login page styling

--- a/views/forms/sign-up.ejs
+++ b/views/forms/sign-up.ejs
@@ -67,7 +67,7 @@
         value="<%= value.admin_code %>"
       />
       <button type="submit">Sing-Up</button>
-      <%- include("./partials/errors.ejs") %>
+      <%- include("../partials/errors.ejs") %>
     </form>
   </body>
 </html>
