--- a/views/chatRoom/guestChatRoom.ejs
+++ b/views/chatRoom/guestChatRoom.ejs
@@ -13,7 +13,7 @@
         <div class="header-container">
           <h3 class="web-head-icon">ChatterBox</h3>
           <div class="profile-btn-ctr">
-            <button><a href="">Create an Account</a></button>
+            <button><a href="/sign-up">Create an Account</a></button>
           </div>
         </div>
         <!-- <h1>Welcome Back <%= user.username %></h1> -->
