--- a/views/chatRoom/loginChatRoom.ejs
+++ b/views/chatRoom/loginChatRoom.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Member Chat | ChatterBox</title>
+    <title>Chat Room | ChatterBox</title>
     <link rel="stylesheet" href="/chat.css" />
     <link rel="shortcut icon" href="/icons/chat.png" type="image/x-icon" />
   </head>
