--- a/views/forms/log-in.ejs
+++ b/views/forms/log-in.ejs
@@ -5,39 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log-In</title>
     <link rel="shortcut icon" href="/icons/chat.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/signup-form.css" />
+    <link rel="stylesheet" href="/login.css" />
   </head>
   <body>
-    <form action="/log-in" method="POST" class="log-in-form">
-      <label for="username">Username</label>
-      <input
-        id="username"
-        type="text"
-        placeholder="Enter your username"
-        name="username"
-        required
-        value="<%= value.username %>"
-      />
-      <% if (value.usernameError) { %>
-      <div class="error-message">
-        <p><%= value.usernameError %></p>
+    <div class="log-in-container">
+      <div class="top-part-login">
+        <h1>LOGIN</h1>
+        <p class="sub-title">Please enter your username and password</p>
       </div>
-      <% } %>
-      <label for="password">Password</label>
-      <input
-        id="password"
-        type="password"
-        placeholder="Enter your password"
-        name="password"
-        required
-        value="<%= value.password %>"
-      />
-      <% if (value.passwordError) { %>
-      <div class="error-message">
-        <p><%= value.passwordError %></p>
-      </div>
-      <% } %>
-      <button type="submit">Log-In</button>
-    </form>
+
+      <form action="/log-in" method="POST" class="log-in-form">
+        <!-- <label for="username">Username</label> -->
+        <input
+          id="username"
+          type="text"
+          placeholder="Enter your username"
+          name="username"
+          required
+          value="<%= value.username %>"
+        />
+        <% if (value.usernameError) { %>
+        <div class="error-message">
+          <p><%= value.usernameError %></p>
+        </div>
+        <% } %>
+        <!-- <label for="password">Password</label> -->
+        <input
+          id="password"
+          type="password"
+          placeholder="Enter your password"
+          name="password"
+          required
+          value="<%= value.password %>"
+        />
+        <% if (value.passwordError) { %>
+        <div class="error-message">
+          <p><%= value.passwordError %></p>
+        </div>
+        <% } %>
+        <div class="btn-container">
+          <button class="submit-btn changecolor" type="submit">LOGIN</button>
+        </div>
+      </form>
+      <p class="sign-up-info">
+        Don't have an account? <a href="/sign-up">Sign Up</a>
+      </p>
+    </div>
   </body>
 </html>
