--- a/views/forms/log-in.ejs
+++ b/views/forms/log-in.ejs
@@ -49,6 +49,9 @@
       </form>
       <p class="sign-up-info">
         Don't have an account? <a href="/sign-up">Sign Up</a>
+        <br />
+        <br />
+        Be a <a href="/chat-room">guest</a>
       </p>
     </div>
   </body>
